alot mopre done

--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="/javascript/chat.js" defer></script>
+    <script type="module" src="/javascript/chat.js" defer></script>
     <link rel="icon" type="image/png" href="https://izumiihd.github.io/pixelitcdn/assets/img/favicon.ico" />
     <link rel="stylesheet" href="../css/chat.css" />
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
