--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -59,10 +59,6 @@
             <h3><span id="username"></span></h3>
             <h3><span id="uid"></span></h3>
             <h3 id="date">Date:</h3>
-            <br>
-            <br>
-            <br>
-            <br>
             <h3><a href="/index.html" class="sign-out" onclick="logout()">Sign Out <i class="fa-solid fa-right-from-bracket"></i></a></h3>
           </div>
         </div>
@@ -71,7 +67,7 @@
           <hr class="separator"/>
           <div class="edit-info-details">
             <h3 id="changeUsername" class="changeUser">Change Username</h3>
-            <!-- <h3 id="changePassword" class="changePass">Change Password (wip)</h3> -->
+          <!---  <h3 id="changePassword" class="changePass">Change Password (wip)</h3> --->
             <h3 id="instantOpen" class="instantOpen">Instant Open:</h3>
           </div>
       </div>
