--- a/public/panel/notifications/notificationsEditor.html
+++ b/public/panel/notifications/notificationsEditor.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Developer Panel</title>
+    <title>Notifications Editor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
