panel mobile ui

--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -43,11 +43,12 @@
         <center>
           <p>
             Welcome to the staff panel, here you can manage forms, users, and audit logs.
-            <br />
-            The Staff panel will be rewritten sometime around update 2.3.0 - 2.5.0.
           </p>
           <br>
-          <h1>Moderation</h1>
+          <h1>Staff
+          <br>
+          Configuration
+          </h1>
           <br>
           <button class="button" onclick="window.location.href='../formsManager/forms.html'">
             <i class='fa-solid fa-file'></i> Forms Manager
