--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -129,13 +129,7 @@
               <img
                 src="https://izumiihd.github.io/pixelitcdn/assets/img/dashboard/token.png"
                 alt="token"
-                style="
-                  display: inline-block;
-                  width: fit-content;
-                  height: 42px;
-                  margin-left: 10px;
-                  transform: rotate(20deg);
-                "
+                class="token"
               />
             </div>
             <div class="info_stat_box">
@@ -147,13 +141,7 @@
               <img
                 src="https://izumiihd.github.io/pixelitcdn/assets/img/dashboard/unlocked.png"
                 alt="unlocked"
-                style="
-                  display: inline-block;
-                  width: fit-content;
-                  height: 46px;
-                  margin-left: 10px;
-                  transform: rotate(20deg);
-                "
+                class="lock"
               />
             </div>
             <div class="info_stat_box">
@@ -165,13 +153,7 @@
               <img
                 src="https://izumiihd.github.io/pixelitcdn/assets/img/dashboard/speech.png"
                 alt="Messages"
-                style="
-                  display: inline-block;
-                  width: fit-content;
-                  height: 46px;
-                  margin-left: 10px;
-                  transform: rotate(20deg);
-                "
+                class="speechBubble"
               />
             </div>
           </div>
