--- a/public/site/market.html
+++ b/public/site/market.html
@@ -64,15 +64,9 @@
         <span id="tokens" style="margin-left: 10px;  font-weight: bold; font-size: 24px;">loading...    </span>
       </div>
       <img
+        class="tokenImg"
         src="https://izumiihd.github.io/pixelitcdn/assets/img/dashboard/token.png"
         alt="token"
-        style="
-          display: inline-block;
-          width: fit-content;
-          height: 42px;
-          margin-left: 10px;
-          transform: rotate(20deg);
-        "
       />
     </div>
       </br>
