--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -42,7 +42,9 @@
         <h1 class="welcome-title">Staff Panel</h1>
         <center>
           <p>
-            Welcome to the staff panel, here you can manage forms, users, and audit logs.
+            Welcome to the staff panel
+            <br>
+            here you can manage forms, users, and audit logs.
           </p>
           <br>
           <h1>Staff
@@ -65,7 +67,7 @@
           <button class="button" onclick="window.location.href='../getHelp/getHelp.html'">
             <i class="fa-solid fa-circle-info"></i> Get Help
           </button>
-      </center>
+        </center>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="/auth/verifyenc.js"></script>
