--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -59,6 +59,8 @@
             <h3><span id="username"></span></h3>
             <h3><span id="uid"></span></h3>
             <h3 id="date">Date:</h3>
+            <br>
+            <h3><a href="/store.html" class="visit-store">Visit Store <i class="fa-solid fa-cart-shopping"></i></a></h3>
             <h3><a href="/index.html" class="sign-out" onclick="logout()">Sign Out <i class="fa-solid fa-right-from-bracket"></i></a></h3>
           </div>
         </div>
