removed .html from files

--- a/public/site/404.html
+++ b/public/site/404.html
@@ -27,7 +27,7 @@
   <div class="container-404">
     <div class="center-container">
       <div class="center-content">
-        <h3 class="title">4 <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/IzumiiHD.png" alt="404 Blook" draggable="false" class="img" onclick="window.location.href='/index.html';"/> 4</h3>
+        <h3 class="title">4 <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/IzumiiHD.png" alt="404 Blook" draggable="false" class="img" onclick="window.location.href='/';"/> 4</h3>
         <p class="description">
           We searched everywhere for the page you were looking for, but it seems it doesn't exist.
         </p>
