--- a/public/site/leaderboard.html
+++ b/public/site/leaderboard.html
@@ -24,22 +24,22 @@
     <div class="navbar">
       <div>
           <div>
-            <a href="/dashboard.html"
+            <a href="/dashboard"
               ><i class="fa-solid fa-chart-column"></i
             ></a>
-            <a href="/chat.html"><i class="fa-solid fa-comments"></i></a>
-            <a href="/leaderboard.html"><i class="fa-solid fa-trophy"></i></a>
-            <a href="/market.html"><i class="fa-solid fa-store"></i></a>
-            <a href="/pixels.html"><i class="fa-solid fa-suitcase"></i></a>
-            <a href="/notifications.html"><i class="fa-solid fa-bell"></i></a>
+            <a href="/chat"><i class="fa-solid fa-comments"></i></a>
+            <a href="/leaderboard"><i class="fa-solid fa-trophy"></i></a>
+            <a href="/market"><i class="fa-solid fa-store"></i></a>
+            <a href="/pixels"><i class="fa-solid fa-suitcase"></i></a>
+            <a href="/notifications"><i class="fa-solid fa-bell"></i></a>
             <a
               id="wrench-icon"
-              href="../panel/enc/enc.html"
+              href="../panel/enc/enc"
               style="display: none"
               ><i class="fa-solid fa-wrench"></i
             ></a>
-            <a href="/settings.html"><i class="fa-solid fa-gear"></i></a>
-            <a href="/index.html"
+            <a href="/settings"><i class="fa-solid fa-gear"></i></a>
+            <a href="/"
               ><i
                 class="fa-solid fa-right-from-bracket"
                 onclick="logout()"
@@ -52,7 +52,7 @@
     <br/>
     <div style="display: flex; justify-content: space-between; width: 100%">
       <div class="leaderboard_Container" id="leaderboardContainer">
-        <p style="text-align: center;" style="color: #gold;" id="loader">Loading...</p>
+        <p style="text-align: center;" style="color: gold;" id="loader">Loading...</p>
       </div>
       <div class="leaderboard_title">
         Leaderboards
