--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -13,22 +13,23 @@
 </head>
 <body style="background: #6d0180">
   <img alt="Blooks Background" class="bg_img" />
-  <div class="navbar">
-    <a href="/index.html"><i class="fa-solid fa-house"></i></a>
-    <div class="dropdown">
-      <button class="dropbtn"><i class="fa-solid fa-bars"></i> 
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="/login.html"><i class="fa-solid fa-right-to-bracket"></i> Login </a>
-        <a href="/register.html"><i class="fa-solid fa-user-plus"></i> Register </a>
-        <a href="/news.html"><i class="fa-solid fa-newspaper"></i> News </a>
-        <a href="/credits.html"><i class="fa-solid fa-users"></i> Credits </a>
-        <a href="/changelogs.html"><i class="fa-solid fa-scroll"></i> Changelogs </a>
+      <div class="navbar">
+        <a href="/"><i class="fa-solid fa-house"></i></a>
+        <div class="dropdown">
+          <button class="dropbtn"><i class="fa-solid fa-bars"></i> 
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="/login"><i class="fa-solid fa-right-to-bracket"></i> Login </a>
+            <a href="/register"><i class="fa-solid fa-user-plus"></i> Register </a>
+            <a href="/news"><i class="fa-solid fa-newspaper"></i> News </a>
+            <a href="/credits"><i class="fa-solid fa-users"></i> Credits </a>
+            <a href="/changelogs"><i class="fa-solid fa-scroll"></i> Changelogs </a>
+          </div>
+        </div> 
       </div>
-    </div> 
-  </div>
-  <div class="title_p" id="title_p">Pixelit</div>
+      <div class="title_p" id="title_p">Pixelit</div>
+    </div>
   <center>
     <h1 style="color: #fff; text-shadow: 2px 2px 4px #000000;">Credits</h1>
   </center>
