--- a/public/site/dashboard.html
+++ b/public/site/dashboard.html
@@ -24,22 +24,22 @@
     <div class="navbar">
       <div>
           <div>
-            <a href="/dashboard.html"
+            <a href="/dashboard"
               ><i class="fa-solid fa-chart-column"></i
             ></a>
-            <a href="/chat.html"><i class="fa-solid fa-comments"></i></a>
-            <a href="/leaderboard.html"><i class="fa-solid fa-trophy"></i></a>
-            <a href="/market.html"><i class="fa-solid fa-store"></i></a>
-            <a href="/pixels.html"><i class="fa-solid fa-suitcase"></i></a>
-            <a href="/notifications.html"><i class="fa-solid fa-bell"></i></a>
+            <a href="/chat"><i class="fa-solid fa-comments"></i></a>
+            <a href="/leaderboard"><i class="fa-solid fa-trophy"></i></a>
+            <a href="/market"><i class="fa-solid fa-store"></i></a>
+            <a href="/pixels"><i class="fa-solid fa-suitcase"></i></a>
+            <a href="/notifications"><i class="fa-solid fa-bell"></i></a>
             <a
               id="wrench-icon"
-              href="../panel/enc/enc.html"
+              href="../panel/enc/enc"
               style="display: none"
               ><i class="fa-solid fa-wrench"></i
             ></a>
-            <a href="/settings.html"><i class="fa-solid fa-gear"></i></a>
-            <a href="/index.html"
+            <a href="/settings"><i class="fa-solid fa-gear"></i></a>
+            <a href="/"
               ><i
                 class="fa-solid fa-right-from-bracket"
                 onclick="logout()"
@@ -85,7 +85,7 @@
         <div class="button_container" style="margin-left: 0px; margin-top: 60px">
         <button
           class="button unlockBlooks"
-          onclick="location.href='/market.html'"
+          onclick="location.href='/market'"
           >
           <i
             class="fa-solid fa-store"
@@ -95,7 +95,7 @@
         </button>
         <button
           class="button manageBlooks"
-          onclick="location.href='pixels.html'"
+          onclick="location.href='/pixels'"
           >
           <i
             class="fa-solid fa-suitcase"
