--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -24,22 +24,22 @@
     <div class="navbar">
       <div>
           <div>
-            <a href="/dashboard.html"
+            <a href="/dashboard"
               ><i class="fa-solid fa-chart-column"></i
             ></a>
-            <a href="/chat.html"><i class="fa-solid fa-comments"></i></a>
-            <a href="/leaderboard.html"><i class="fa-solid fa-trophy"></i></a>
-            <a href="/market.html"><i class="fa-solid fa-store"></i></a>
-            <a href="/pixels.html"><i class="fa-solid fa-suitcase"></i></a>
-            <a href="/notifications.html"><i class="fa-solid fa-bell"></i></a>
+            <a href="/chat"><i class="fa-solid fa-comments"></i></a>
+            <a href="/leaderboard"><i class="fa-solid fa-trophy"></i></a>
+            <a href="/market"><i class="fa-solid fa-store"></i></a>
+            <a href="/pixels"><i class="fa-solid fa-suitcase"></i></a>
+            <a href="/notifications"><i class="fa-solid fa-bell"></i></a>
             <a
               id="wrench-icon"
-              href="../panel/enc/enc.html"
+              href="../panel/enc/enc"
               style="display: none"
               ><i class="fa-solid fa-wrench"></i
             ></a>
-            <a href="/settings.html"><i class="fa-solid fa-gear"></i></a>
-            <a href="/index.html"
+            <a href="/settings"><i class="fa-solid fa-gear"></i></a>
+            <a href="/"
               ><i
                 class="fa-solid fa-right-from-bracket"
                 onclick="logout()"
@@ -60,8 +60,8 @@
             <h3><span id="uid"></span></h3>
             <h3 id="date">Date:</h3>
             <br>
-            <h3><a href="/store.html" class="visit-store">Visit Store <i class="fa-solid fa-cart-shopping"></i></a></h3>
-            <h3><a href="/index.html" class="sign-out" onclick="logout()">Sign Out <i class="fa-solid fa-right-from-bracket"></i></a></h3>
+            <h3><a href="/store" class="visit-store">Visit Store <i class="fa-solid fa-cart-shopping"></i></a></h3>
+            <h3><a href="/" class="sign-out" onclick="logout()">Sign Out <i class="fa-solid fa-right-from-bracket"></i></a></h3>
           </div>
         </div>
         <div class="edit-info-section">
