--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -84,6 +84,9 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a pixel gifting feature.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a notifications feature.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added a new blooks background.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added little touches to the site.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Switched domains to https://izumiihd.xyz/</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Removed .html from the link.</h3>
       </div>
     </div>
   </div>
