k im acc finished for tn

--- a/public/site/credits.html
+++ b/public/site/credits.html
@@ -60,19 +60,24 @@
       <h4>An amazing Pixelit artist and has been supporting the game for a very long time.</h4>
     </div>
     <div class="credits-container">
-      <h3>Buenar</h3>
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Buenar.png" alt="Buenar" draggable="false">
-      <h4>An OG Pixelit player and a tester of Pixelit.</h4>
-    </div>
-    <div class="credits-container">
       <h3>ThatPlanet</h3>
       <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/ThatPlanet.png" alt="ThatPlanet" draggable="false">
-      <h4>Long time contributer to Pixelit's development, and an OG thats never left since May 2023.</h4>
+      <h4>Long time contributer to Pixelit's growth, and an OG thats never left since May 2023.</h4>
+    </div>
+        <div class="credits-container">
+      <h3>Lemon</h3>
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/Placeholder.png" alt="Prq" draggable="false">
+      <h4>Long time contributer to Pixelit's growth, and has helped alot with v2 release.</h4>
+    </div>
+    <div class="credits-container">
+      <h3>Buenar</h3>
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/OG/Buenar.png" alt="Buenar" draggable="false">
+      <h4>Long time contributer to Pixelit's growth, an OG and a tester of Pixelit.</h4>
     </div>
     <div class="credits-container">
       <h3>Prq</h3>
       <img src="https://izumiihd.github.io/pixelitcdn/assets/img/blooks/Placeholder.png" alt="Prq" draggable="false">
-      <h4>Long time contributer to Pixelit's development, and an amazing exploit finder.</h4>
+      <h4>Long time contributer to Pixelit's growth, and an amazing exploit finder.</h4>
     </div>
   </body>
   <script src="/auth/console.js"></script>
