--- a/public/site/index.html
+++ b/public/site/index.html
@@ -47,7 +47,7 @@
         Created by IzumiiHD and Iamgamedude!
       </h2>
       <br />
-      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/home/homeBlooks.png" alt="Home Blooks" draggable="false" class="float-img" onclick="window.location.href='/register.html';"/>
+      <img src="https://izumiihd.github.io/pixelitcdn/assets/img/home/homeBlooks.png" alt="Home Blooks" draggable="false" class="float-img" onclick="window.location.href='/register';"/>
       <div id="pronunciation" class="pronunciation">
         <i class="fa-solid fa-volume-up pronunciation-icon"></i><span class="pronunciation-text"> Pronunciation ("Pixel-it")</span>
       </div>
@@ -60,9 +60,6 @@
         </a>
         <a href="https://www.reddit.com/r/Pixelit/" class="social-link" style="color: #FF4500;">
           <i class="fa-brands fa-reddit"></i>
-        </a>
-        <a href="https://pixelit.fandom.com/wiki/Pixelit_Wiki" class="social-link" style="color: #F20505;">
-          <i class="fa-solid fa-book"></i>
         </a>
       </div>
       <h3 class="terms-of-service">
