--- a/public/panel/enc/enc.html
+++ b/public/panel/enc/enc.html
@@ -52,19 +52,19 @@
           Configuration
           </h1>
           <br>
-          <button class="button" onclick="window.location.href='../formsManager/forms.html'">
+          <button class="button" onclick="window.location.href='../formsManager/forms'">
             <i class='fa-solid fa-file'></i> Forms Manager
           </button>
           <br>
-          <button class="button" onclick="window.location.href='../userManagment/userManager.html'">
+          <button class="button" onclick="window.location.href='../userManagment/userManager'">
             <i class="fa-solid fa-users"></i> User Manager
           </button>
           <br>
-          <button class="button" onclick="window.location.href='../auditLogs/auditLogs.html'">
+          <button class="button" onclick="window.location.href='../auditLogs/auditLogs'">
             <i class="fa-solid fa-list"></i> Audit Logs
           </button>
           <br>
-          <button class="button" onclick="window.location.href='../getHelp/getHelp.html'">
+          <button class="button" onclick="window.location.href='../getHelp/getHelp'">
             <i class="fa-solid fa-circle-info"></i> Get Help
           </button>
         </center>
