--- a/public/panel/ownerPanelPage/owner.html
+++ b/public/panel/ownerPanelPage/owner.html
@@ -54,7 +54,7 @@
       <h1>Game Configuration</h1>
       <button
         class="button"
-        onclick="window.location.href='../badge/badgeeditor.html'"
+        onclick="window.location.href='../badge/badgeeditor'"
       >
         <i class="fa-solid fa-medal"></i> Badge Editor
       </button>
@@ -63,7 +63,7 @@
 
       <button
         class="button"
-        onclick="window.location.href='../packEditorPage/packeditor.html'"
+        onclick="window.location.href='../packEditorPage/packeditor'"
       >
         <i class="fa-solid fa-store"></i> Pack Editor
       </button>
@@ -72,7 +72,7 @@
 
       <button
         class="button"
-        onclick="window.location.href='../news/newsedit.html'"
+        onclick="window.location.href='../news/newsedit'"
       >
         <i class="fa-solid fa-newspaper"></i> News Editor
       </button>
@@ -81,7 +81,7 @@
 
       <button
         class="button"
-        onclick="window.location.href='../notifications/notificationsEditor.html'"
+        onclick="window.location.href='../notifications/notificationsEditor'"
       >
         <i class="fa-solid fa-bell"></i> Notifications Editor
       </button>
