thank you spencer

--- a/public/site/pixels.html
+++ b/public/site/pixels.html
@@ -58,7 +58,7 @@
         <h1 style="font-size: 26px;">Pack</h1>
         <div class="items">
           <div class="item">
-            <i class="fa-solid fa-lock fa-2xl" style="text-shadow: 2px 2px 4px #000000;"></i>
+            <img src="https://izumiihd.github.io/pixelitcdn/assets/img/icons/lock.png" alt="Locked" class="locked">
             <div class="badge">0</div>
           </div>
         </div>
