--- a/public/site/store.html
+++ b/public/site/store.html
@@ -37,7 +37,7 @@
             <div class="price">$3.99</div>
             <img src="https://izumiihd.github.io/pixelitcdn/assets/img/badges/Plus.png" alt="Plus" class="plus" style="width: 200px;">
             <br><br>
-            <!-- <div id="checkout-button" class="pixelitPlusPurchase" onclick="window.location.href='https://buy.stripe.com/test_aFaeVc95G0w01rZ3yUgMw01'">BUY NOW</div> -->
+            <div class="pixelitPlusPurchase" onclick="window.location.href='https://paypal.me/technoscootalo'">BUY NOW</div>
             <p>Unlock exclusive features and support the Pixelit community!</p>
             <p class="support-email">For customer support, email us at <a href="mailto:izumiihd@outlook.com">izumiihd@outlook.com</a></p>
         </div>
@@ -47,7 +47,7 @@
         <div class="donation-item">
           <div class="item-name">Donation</div>
             <div class="price">$$$</div>
-            <img src="https://izumiihd.github.io/pixelitcdn/assets/img/icons/MoneyBag.png" alt="Donation" class="donate" style="width: 200px;">
+            <img src="https://izumiihd.github.io/pixelitcdn/assets/img/icons/moneyBag.png" alt="Donate" class="donate" style="width: 200px;">
             <br><br>
             <div class="pixelitPlusPurchase" onclick="window.location.href='https://paypal.me/technoscootalo'">Donate</div>
             <p>Support the Pixelit community by donating a generous amount of money!</p>
