--- a/public/site/index.html
+++ b/public/site/index.html
@@ -52,10 +52,10 @@
         <i class="fa-solid fa-volume-up pronunciation-icon"></i><span class="pronunciation-text"> Pronunciation ("Pixel-it")</span>
       </div>
       <div id="socials" class="socials">
-        <a href="https://discord.gg/KXvHan3C8R" class="social-link" style="color: #5865F2;">
+        <a href="https://discord.gg/pixelit" class="social-link" style="color: #5865F2;">
           <i class="fa-brands fa-discord"></i>
         </a>
-        <a href="https://github.com/IzumiiHD/Pixelit" class="social-link" style="color: #fff;">
+        <a href="https://github.com/IzumiiHD/Pixelit-BPS" class="social-link" style="color: #fff;">
           <i class="fa-brands fa-github"></i>
         </a>
         <a href="https://www.reddit.com/r/Pixelit/" class="social-link" style="color: #FF4500;">
