--- a/public/site/chat.html
+++ b/public/site/chat.html
@@ -84,7 +84,7 @@
           type="text"
           class="sendInput"
           id="send"
-          placeholder="Type Here..."
+          placeholder="Message"
           style="font-size: 1.3em;"
         />
       </div>
