--- a/public/site/settings.html
+++ b/public/site/settings.html
@@ -57,6 +57,7 @@
           <hr class="separator"/>
           <div class="profile-details">
             <h3><span id="username"></span></h3>
+            <h3><span id="joinDate"></span></h3>
             <h3><span id="uid"></span></h3>
             <h3 id="date">Date:</h3>
             <br>
