--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -74,7 +74,7 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Minor market edits.</h3>
       </div>
 
-      <div class="changelog-entry changelog-v226">
+      <div class="changelog-entry changelog-v224">
         <h2 class="changelog-version">Version 2.2.4 - New Updates and Improvements</h2>
         <p class="changelog-description">This update includes the following changes:</p>
 
@@ -87,6 +87,15 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added little touches to the site.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Switched domains to https://izumiihd.xyz/</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Removed .html from the link.</h3>
+      </div>
+
+      <div class="changelog-entry changelog-v225">
+        <h2 class="changelog-version">Version 2.2.5 - Bug Fixes and Improvements</h2>
+        <p class="changelog-description">This update includes the following changes:</p>
+
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Re enabled Gifting and fixed the issue.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Working on Discord logs for ingame.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added Join dates to users in the database.</h3>
       </div>
     </div>
   </div>
