--- a/public/site/pixels.html
+++ b/public/site/pixels.html
@@ -92,7 +92,7 @@
       </center>
     </div>
     <button id="gift" class="giftButton" >
-     <i class="fa-solid fa-gift" style="font-size: 26px;"></i> Gifting has been disabled at the moment
+     <i class="fa-solid fa-gift" style="font-size: 26px;"></i> Gift
     </button>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="/javascript/pixels.js"></script>
