--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -14,7 +14,7 @@
 <body style="background-color: #6d0180;">
   <img alt="Blooks Background" class="bg_img">
   <div class="navbar">
-    <a href="/index"><i class="fa-solid fa-house"></i></a>
+    <a href="/"><i class="fa-solid fa-house"></i></a>
     <div class="dropdown">
       <button class="dropbtn"><i class="fa-solid fa-bars"></i> 
         <i class="fa fa-caret-down"></i>
@@ -96,6 +96,14 @@
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Re enabled Gifting and fixed the issue.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Working on Discord logs for ingame.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Added Join dates to users in the database.</h3>
+      </div>
+
+      <div class="changelog-entry changelog-v226">
+        <h2 class="changelog-version">Version 2.2.6 - New Role</h2>
+        <p class="changelog-description">This update includes the following changes:</p>
+
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Community Manager role added to Pixelit!</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> and thats about it lol 💀</h3>
       </div>
     </div>
   </div>
