--- a/public/site/index.html
+++ b/public/site/index.html
@@ -63,7 +63,7 @@
         </a>
       </div>
       <h3 class="terms-of-service">
-        <a href="../tos.html" style="color: #fff;">Terms Of Service </a>
+        <a href="/tos" style="color: #fff;">Terms Of Service </a>
       </h3>
     </center>
     <script type="module">
