--- a/public/site/changelogs.html
+++ b/public/site/changelogs.html
@@ -99,10 +99,12 @@
       </div>
 
       <div class="changelog-entry changelog-v226">
-        <h2 class="changelog-version">Version 2.2.6 - New Role</h2>
+        <h2 class="changelog-version">Version 2.2.6 - New Role And Page Updates</h2>
         <p class="changelog-description">This update includes the following changes:</p>
 
-          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Community Manager role added to Pixelit!</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Community Manager role added to Pixelit.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Terms Of Service coming soon.</h3>
+          <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> Promotion Waves.</h3>
           <h3 class="changelog-feature"><i class="fas fa-check-circle changelog-check"></i> and thats about it lol 💀</h3>
       </div>
     </div>
